Send usr instead SubID GetUserByName, UpdateUser GetFriendsModel User name, email, imageURL
