# models/user_model.go
@@ -5,8 +5,11 @@ import (
 )
 
 type User struct {
-	ID        uint      `gorm:"primaryKey"`
-	SubID     string    `gorm:"uniqueIndex"`
+	ID        uint   `gorm:"primaryKey"`
+	SubID     string `gorm:"uniqueIndex"`
+	Name      string `gorm:"not null"`
+	Email     string `gorm:"uniqueIndex"`
+	ImageURL  string
 	CreatedAt time.Time `gorm:"autoCreateTime"`
 	UpdatedAt time.Time `gorm:"autoUpdateTime"`
 }
